testsuite/bsc.interra/messages/EUnboundClCon/EUnboundClCon.bs.bsc-out.expected
checking package dependencies
compiling EUnboundClCon.bs
Error: "EUnboundClCon.bs", line 18, column 13: (T0006)
  Unbound class `Int'
